# llce

./: .gitignore  README.md  meson.build
example/: cli_cookie_clicker.c  meson.build
src/: main.c  meson.build
src/datastructure/: hashmap.c  hashmap.h
src/test/: test_hashmap.c
src/ui/: app_state.h  logger.c  logger.h  ui.c  ui.h
src/ui/handler/: attach.c  cleanup.c  detect.c  fullscan.c  handler.h  help.c  poke.c  print_prompt.c  search.c
src/utils/: maps.c  maps.h  pid.c  pid.h  poke.c  poke.h  probe.c  probe.h  scan.c  scan.h
